...
"sign_up" = "Sign up";
"mobile_number" = "Mobile number";
"mobile_numbers" = "Mobile numbers";
"mobile_number*" = "Mobile number*";
"select_mobile_number" = "Select Mobile number";
"agree_gdpr" = "Agree GDPR Compliance";
"send_otp" = "Send SMS verification code";
"register_account" = "Register Account";
"select_mobile_number_and_continue" = "Create a new account by entering your mobile number";


// ALERT BUTTON
"ok" = "OK";
...
"please_select_mobile_number" = "Please Select Mobile number";


// BIO METRIC AUTHENTICATION
"identify_yourself" = "Identify yourself";
"biometric_authentication" = "Biometric authentication";
"login" = "Log in";
"welcome_back!" = "Welcome Back!";
"face_id" = "Face ID";
"touch_id" = "Touch ID";
"passcode" = "Passcode";
"biometryNotAvailable" = "Authentication could not start because the device does not support biometric authentication.";
"biometryLockout" = "Authentication could not continue because the user has been locked out of biometric authentication, due to failing authentication too many times.";
...

// MY PROFILE
"my_profile" = "My Profile";
"edit" = "Edit";
"email" = "Email";
"emails" = "Emails";
"email*" = "Email*";
"address" = "Address";
"addresses" = "Addresses";
"address*" = "Address*";
"social" = "Social";
"social_media" = "Social Media";
"add_more" = "Add more";
"select_question" = "Select Question";
"question" = "Questions";
"answer_here" = "Answer Here..";
"save" = "Save";
"save_now" = "Save Now";
"what_city_were_you_born_in" = "What city were you born in?";
"what_is_the_name_of_your_first_pet" = "What is the name of your first pet?";
"what_is_your_favorite_book_or_movie" = "What is your favorite book or movie?";
"what_is_your_nick_name" = "What is your nick name?";
"what_is_your_favorite_food" = "What is your favorite food?";
"answer_the_security_question" = "Answer The Security Question & Continue With AddressFull";

// COMPLETE PROFILE
"complete_your_profile" = "Complete your profile";
"name" = "Name";
"first_name" = "First name";
"first_name*" = "First name*";
"last_name" = "Last name";
"last_name*" = "Last name*";
"security_questions*" = "Security questions*";
"back" = "Back";


// PHONE NUMBER
...
"remove_all_trusted_organization_popup_title" = "Delete all of my organisations";
"delete_all_organizations" = "Delete";
"remove_all_trusted_organization_confirmation_popup_title" = "Are you sure that you want to delete all of your organisations?";
"remove_all_trusted_organization_confirmation_popup_first_option" = "By clicking here, all of your organisations will be deleted from your account. This action is permanent and cannot be undone.";
"remove_all_trusted_organization_confirmation_popup_second_option" = "I would like to request to be removed from all of my organisation database.";
"trusted_organization_are_deleted" = "All of your organisations have been successfully deleted from your account";
"okay" = "Okay";
"delete" = "Delete";
"remove_my_profile_confirmation_popup_title" = "Are you sure that you want to delete your account?";
"remove_my_profile_confirmation_popup_first_option" = "Yes, please delete my AddressFull Account.";
"remove_my_profile_confirmation_popup_second_title" = "If you proceed, your account will be permanently deleted.";
"remove_my_profile_confirmation_popup_second_option" = "Send a request to my organisations to delete my contact details from their records";
"remove_my_profile_confirmation_popup_third_option" = "You can recover it within 24 hours. After this period, the action cannot be undone.";
...
